# editorgtk

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  editor.c  extra.c  menu.c
autom4te.cache/: output.1  requests  traces.0  traces.1
