AC_PREREQ(2.57)

AC_INIT(editorgtk, 1.0.0)

AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

GTK_REQUIRED_VERSION=2.0.0
GLIB_REQUIRED_VERSION=$GTK_REQUIRED_VERSION

AM_PATH_GLIB_2_0($GLIB_REQUIRED_VERSION,,
  [AC_MSG_ERROR(Test for GLib failed.)], gobject)
AM_PATH_GTK_2_0($GTK_REQUIRED_VERSION,,
  [AC_MSG_ERROR(Test for GTK failed.)])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
